<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03468f"
    tools:context=".MainAccount">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="106dp"
        android:layout_height="102dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="153dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/crypto_logo"
        android:contentDescription="@string/crypto_wallet_logo" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="223dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/FAButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="390dp"
        android:layout_height="64dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="60dp"
        android:text="@string/subscription"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toTopOf="@+id/FAButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/FAButton"
        android:layout_width="390dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="284dp"
        android:text="@string/_2_factor_authentication"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="253dp"
        android:layout_height="57dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="132dp"
        android:text="@string/remove_account"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FAButton" />

    <Button
        android:id="@+id/backButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="25dp"
        android:text="@string/go_back"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>