<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03468f"
    tools:context=".RemoveAccount">

    <Button
        android:id="@+id/backButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="451dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="25dp"
        android:text="@string/go_back4"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeAccountText" />

    <ImageView
        android:id="@+id/logo3"
        android:layout_width="106dp"
        android:layout_height="102dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/crypto_wallet_logo"
        app:layout_constraintBottom_toTopOf="@+id/removeAccountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/crypto_logo"/>

    <TextView
        android:id="@+id/removeAccountText"
        android:layout_width="196dp"
        android:layout_height="96dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="41dp"
        android:gravity="center_horizontal"
        android:text="@string/remove_account_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/sureText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo3" />

    <Button
        android:id="@+id/yesButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="10dp"
        android:text="@string/yes"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toTopOf="@+id/noButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sureText2" />

    <TextView
        android:id="@+id/sureText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/are_you_sure"
        app:layout_constraintBottom_toTopOf="@+id/yesButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeAccountText" />

    <Button
        android:id="@+id/noButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="338dp"
        android:text="@string/no"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>