<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03468f"
    tools:context=".SendFunds">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bitcoinImage2"
            android:layout_width="93dp"
            android:layout_height="82dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="244dp"
            android:layout_marginEnd="35dp"
            android:contentDescription="@string/bitcoin_image"
            app:layout_constraintEnd_toStartOf="@+id/bitcoinButton2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bitcoin" />

        <TextView
            android:id="@+id/viewprivatekeys"
            android:layout_width="196dp"
            android:layout_height="96dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="108dp"
            android:gravity="center_horizontal"
            android:text="@string/send_funds"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <ImageView
            android:id="@+id/ethereumImage2"
            android:layout_width="87dp"
            android:layout_height="79dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="31dp"
            android:contentDescription="@string/ethereum_image"
            app:layout_constraintEnd_toStartOf="@+id/ethereumButton2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bitcoinImage2"
            app:srcCompat="@drawable/ethereum" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="106dp"
            android:layout_height="102dp"
            android:layout_marginStart="152dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="153dp"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/crypto_wallet_logo"
            app:layout_constraintBottom_toTopOf="@+id/viewprivatekeys"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/crypto_logo" />

        <Button
            android:id="@+id/bitcoinButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="156dp"
            android:backgroundTint="#646464"
            android:text="@string/bitcoin_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <Button
            android:id="@+id/ethereumButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="148dp"
            android:backgroundTint="#646464"
            android:text="@string/ethereum_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bitcoinButton2" />

        <Button
            android:id="@+id/goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="289dp"
            android:layout_marginBottom="25dp"
            android:text="@string/go_back"
            android:backgroundTint="#646464"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/sidemenu_header"
        app:menu="@menu/side_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>