<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03468f"
    tools:context=".Subscription">

    <Button
        android:id="@+id/downgradeButton"
        android:layout_width="381dp"
        android:layout_height="54dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="#646464"
        android:text="@string/downgrade_to_free"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paidFeaturesButton" />

    <Button
        android:id="@+id/backButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="25dp"
        android:text="@string/go_back5"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/downgradeButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:text="@string/subscription_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/upgradeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    if user has upgraded to paid, above button disappears, below buttons should appear-->

    <Button
        android:id="@+id/upgradeButton"
        android:layout_width="390dp"
        android:layout_height="64dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="47dp"
        android:text="@string/upgrade_to_paid"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toTopOf="@+id/paidFeaturesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/paidFeaturesButton"
        android:layout_width="390dp"
        android:layout_height="64dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="96dp"
        android:text="@string/paid_features"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toTopOf="@+id/upgradeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upgradeButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="106dp"
        android:layout_height="102dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="153dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/crypto_logo"
        android:contentDescription="@string/crypto_wallet_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>