<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03468f"
    tools:context=".Upgrade">

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="281dp"
        android:text="@string/no"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesButton" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="11dp"
        android:text="@string/yes"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toTopOf="@+id/noButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sureText" />

    <TextView
        android:id="@+id/sureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="15dp"
        android:text="@string/are_you_sure"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/yesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upgradeText" />

    <ImageView
        android:id="@+id/logo7"
        android:layout_width="106dp"
        android:layout_height="102dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="153dp"
        android:contentDescription="@string/crypto_wallet_logo"
        app:layout_constraintBottom_toTopOf="@+id/upgradeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/crypto_logo"/>

    <TextView
        android:id="@+id/upgradeText"
        android:layout_width="196dp"
        android:layout_height="96dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="522dp"
        android:gravity="center_horizontal"
        android:text="@string/upgrade_account_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="25dp"
        android:text="@string/go_back4"
        android:backgroundTint="#646464"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upgradeText" />
</androidx.constraintlayout.widget.ConstraintLayout>