<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03468f"
    tools:context=".BitcoinInfo">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="106dp"
        android:layout_height="102dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/crypto_wallet_logo"
        app:layout_constraintBottom_toTopOf="@+id/BitcoinText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/crypto_logo" />

    <TextView
        android:id="@+id/BitcoinText"
        android:layout_width="196dp"
        android:layout_height="96dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="140dp"
        android:gravity="center_horizontal"
        android:text="@string/bitcoin_btc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/BitcoinImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo2" />

    <ImageView
        android:id="@+id/BitcoinImage"
        android:layout_width="111dp"
        android:layout_height="103dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="38dp"
        app:layout_constraintBottom_toTopOf="@+id/BTCAsset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BitcoinText"
        app:srcCompat="@drawable/bitcoin"
        android:contentDescription="@string/bitcoin_image2" />

    <TextView
        android:id="@+id/BTCAsset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="129dp"
        android:text="@string/btc_asset_obtained2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BitcoinImage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="521dp"
        android:layout_marginEnd="411dp"
        android:layout_marginBottom="210dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="521dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#646464"
        android:text="@string/go_back4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/BTCPrice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="119dp"
        android:text="@string/btc_current_price2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTCAsset" />

</androidx.constraintlayout.widget.ConstraintLayout>